# aqira

./: .gitlab-ci.yml  README.md  pyproject.toml
src/aqira/: __init__.py  qkd.py  sync.py  wg.py
test/: Dockerfile  aqira.Dockerfile  aqira.Dockerfile.dockerignore  compose.yaml  ksnp.Dockerfile  network.sh
test/alice/: peer.key  private.key  start.sh  wg0.conf
test/bob/: peer.key  private.key  start.sh  wg0.conf
